--- a/buildspec.yml
+++ b/buildspec.yml
@@ -38,6 +38,8 @@ phases:
         - $(aws ecr get-login --no-include-email)
         - export KUBECONFIG=$HOME/.kube/config
         - echo `ls -l`
+        - pip install -r requirements.txt 
+        - python -m pytest test_main.py
   build:
     commands:
       - docker build --tag $REPOSITORY_URI:$TAG .
@@ -54,4 +56,4 @@ artifacts:
   files: build.json
 env:
   parameter-store:         
-    JWT_SECRET: JWT_SECRET
+    JWT_SECRET: JWT_SECRETj
